Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74961

While reading and writing continously via a QSerialPort it is leaking memory

XMLWordPrintable

    • Windows
    • 85ee2c658a45d2958a54045951d236769640337f (qt/qtserialport/5.12)

      While reading and writing continously via a QSerialPort it is leaking memory. This seems to be coming from the QWinOverlappedIoNotifier code where it seems to come via _q_notify().

      This was confirmed via the Diagnostic Tools in VS 2017 with heap profiling turned on, the leak is small but does continue to increase over time.

        1. qtbug74961.7z
          1.0 kB
          Joerg Bornemann
        2. qtbug74961.tar.gz
          4 kB
          Andy Shaw
        For Gerrit Dashboard: QTBUG-74961
        # Subject Branch Project Status CR V

            jbornema Joerg Bornemann
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes