src/serialport/serialport-lib.pri
@@ -23,10 +23,9 @@ win32 {
     SOURCES += \
         $$PWD/qserialport_win.cpp \
         $$PWD/qserialportinfo_win.cpp \
-        $$PWD/qwinoverlappedionotifier.cpp
 
     PRIVATE_HEADERS += \
-        $$PWD/qwinoverlappedionotifier_p.h
+        $$PWD/qtntdll_p.h
 
     LIBS_PRIVATE += -lsetupapi -ladvapi32
 }
